# Prestige

./: .gitignore  BETA_README.md  CMakeLists.txt  README.md  build_mac.sh
.github/workflows/: build-macos.yml  build-windows.yml
ai_engine/: detector.py  frame_receiver.py  main.py  requirements.txt  setup_mac.sh  social_chat.py  subtitle_engine.py  talent_manager.py  talents.json  tracker.py  zmq_publisher.py
ai_module/: CMakeLists.txt
ai_module/src/: AiPipeline.cpp  AiPipeline.h  FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  FaceTracker.cpp  FaceTracker.h  TalentDatabase.cpp  TalentDatabase.h  TwitchChat.cpp  TwitchChat.h  WhisperEngine.cpp  WhisperEngine.h
assets/: generate_icon.sh  icon.icns
broadcast_sdk/: AjaCapture.cpp  AjaCapture.h  CMakeLists.txt  DecklinkCapture.cpp  DecklinkCapture.h  HardwareScanner.cpp  HardwareScanner.h  MagewellCapture.cpp  MagewellCapture.h  NdiCapture.cpp  NdiCapture.h  RuntimeLoader.cpp  RuntimeLoader.h
control_room/: CMakeLists.txt  Info.plist.in
control_room/qml/: ColorPickerButton.qml  LiveView.qml  MacroPanel.qml  MainView.qml  MonitorPanel.qml  OutputStep.qml  OverlayPanel.qml  ScoreboardPanel.qml  SettingsPanel.qml  SetupView.qml  SocialChatPanel.qml  SourceStep.qml  StatsPanel.qml  StyleStep.qml  SubtitlePanel.qml  TalentStep.qml  TeleprompterPanel.qml  TestStep.qml  ThemeManager.qml  TickerPanel.qml  VirtualStudioPanel.qml  WeatherPanel.qml
control_room/resources/: icons.qrc
control_room/src/: AnalyticsEngine.cpp  AnalyticsEngine.h  AudioMeter.cpp  AudioMeter.h  ConfigManager.cpp  ConfigManager.h  EmissionProfile.cpp  EmissionProfile.h  GraphicsQueue.cpp  GraphicsQueue.h  LicenseManager.cpp  LicenseManager.h  LiveController.cpp  LiveController.h  MacroEngine.cpp  MacroEngine.h  MainWindow.cpp  MainWindow.h  OverlayController.cpp  OverlayController.h  PreviewMonitor.cpp  PreviewMonitor.h  RssFetcher.cpp  RssFetcher.h  SetupController.cpp  SetupController.h  SocialChatController.cpp  SocialChatController.h  StyleRegistry.cpp  StyleRegistry.h  SubtitleController.cpp  SubtitleController.h  TalentManager.cpp  TalentManager.h  WeatherFetcher.cpp  WeatherFetcher.h  WebRemoteServer.cpp  WebRemoteServer.h  main.cpp
resources/: prestige.icns
resources/animations/: title_01.json  title_02.json  title_03.json  title_04.json  title_05.json  title_06.json  title_07.json  title_08.json  title_09.json
resources/studios/presets/: studios.json
scripts/: Info.plist  LICENSE.txt  PrestigeAI.vbs  THIRD_PARTY_LICENSES.txt  install_beta.sh  installer.iss  launcher.rc  launcher.sh  launcher_windows.c  package_mac.sh
shared/: FrameMetadata.h  PluginInterface.h  Protocol.h  TalentData.h
vision_engine/: CMakeLists.txt  Info.plist.in
vision_engine/qml/: LowerThird.qml  OverlayNameplate.qml  OverlayStyleEngine.qml  TransitionEffect.qml
vision_engine/qml/styles/: StyleAljazeeraEn.qml  StyleBBC.qml  StyleBFM.qml  StyleBreaking.qml  StyleCNN.qml  StyleCinema.qml  StyleDualPerson.qml  StyleFootball.qml  StyleFrance2.qml  StyleFrance24.qml  StyleFullscreen.qml  StyleGouvernement.qml  StyleLCI.qml  StyleLuxury.qml  StyleMinimal.qml  StyleOlympics.qml  StylePolitique.qml  StyleSkyNews.qml  StyleSports.qml  StyleTechModern.qml
vision_engine/src/: AEBroadcastEffects.cpp  AEEasing.cpp  AEEasing.h  AEGpuEffects.cpp  BroadcastEffects.cpp  BroadcastEffects.h  CinematicOverlays.cpp  CinematicOverlays.h  Compositor.cpp  Compositor.h  DesignTemplates.cpp  DesignTemplates.h  FrameSender.cpp  FrameSender.h  GpuEffects.cpp  GpuEffects.h  LottieEngine.cpp  LottieEngine.h  OutputRouter.cpp  OutputRouter.h  OverlayRenderer.cpp  OverlayRenderer.h  PreviewSender.cpp  PreviewSender.h  Studio3DRenderer.cpp  Studio3DRenderer.h  VideoCapture.cpp  VideoCapture.h  VideoEncoder.cpp  VideoEncoder.h  VirtualStudio.cpp  VirtualStudio.h  ZmqSubscriber.cpp  ZmqSubscriber.h  main.cpp
